# 2048

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp  setEnv.sh
Engine/: Engine.cpp  Engine.hpp  Gameboard.cpp  Gameboard.hpp  Scoreboard.cpp  Scoreboard.hpp
